--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,15 +119,16 @@ dependencies {
     implementation 'com.blankj:utilcode:1.20.3'
     implementation project(':p2PCore')
     implementation 'com.getui:sdk:2.13.2.0'
-    implementation 'io.reactivex:rxjava:1.1.0'
-    implementation 'io.reactivex:rxandroid:1.1.0'
+    implementation 'io.reactivex:rxjava:1.2.3'
+    implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'com.jakewharton.rxbinding:rxbinding:1.0.0'
     implementation 'com.jakewharton:butterknife:7.0.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.1.2'
-    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.7'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.jakewharton:butterknife:7.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.3'
@@ -137,4 +138,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'org.litepal.android:core:2.0.0'
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
+    implementation 'com.yuyh.imgsel:library:2.0.6'
 }
