--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,6 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.autofocus" />
 
-
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
@@ -60,8 +59,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
@@ -176,6 +173,7 @@
             android:name="com.smart.cloud.fire.mvp.LineChart.LineChartActivity"
             android:label="@string/line_chart_activity"
             android:launchMode="singleTop"
+            android:screenOrientation="sensor"
             android:theme="@style/AppTheme" />
         <activity
             android:name="com.smart.cloud.fire.mvp.electric.ElectricActivity"
@@ -408,7 +406,8 @@
             android:name="com.smart.cloud.fire.activity.Inspection.UploadInspectionInfo.UploadProblemActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="stateHidden|stateUnchanged" />
-        <activity android:name="com.smart.cloud.fire.rqcode.Capture2Activity"></activity>
+        <activity android:name="com.smart.cloud.fire.rqcode.Capture2Activity" />
+        <activity android:name="com.smart.cloud.fire.activity.AlarmDevDetail.AlarmDevDetailActivity"></activity>
     </application>
 
 </manifest>
