--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,7 +128,7 @@ dependencies {
     implementation 'io.reactivex:rxjava:1.2.3'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'com.jakewharton.rxbinding:rxbinding:1.0.0'
-    implementation 'com.jakewharton:butterknife:7.0.1'
+//    implementation 'com.jakewharton:butterknife:7.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
@@ -143,6 +143,7 @@ dependencies {
     implementation files('libs/hellocharts-library-1.5.8.jar')
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'org.litepal.android:core:2.0.0'
-    implementation 'cn.yipianfengye.android:zxing-library:2.2'
-    implementation 'com.yuyh.imgsel:library:2.0.6'
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'//二维码
+    implementation 'com.yuyh.imgsel:library:2.0.6'//图片选择器
+    implementation 'com.contrarywind:Android-PickerView:4.1.9'
 }
