新设备列表模块完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -406,7 +406,8 @@
         <activity android:name="com.smart.cloud.fire.rqcode.Capture2Activity" />
         <activity android:name="com.smart.cloud.fire.activity.AlarmDevDetail.AlarmDevDetailActivity" />
         <activity android:name="com.smart.cloud.fire.activity.AlarmDeviceByType.AlarmDeviceByTypeActivity" />
-        <activity android:name="com.smart.cloud.fire.activity.AlarmButtonDev.AlarmButtomActivity"></activity>
+        <activity android:name="com.smart.cloud.fire.activity.AlarmButtonDev.AlarmButtomActivity" />
+        <activity android:name="com.smart.cloud.fire.activity.ZDDevList.DeviceListByTypeActivity"></activity>
     </application>
 
 </manifest>
