注册模块改为mob验证码

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,20 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.mob.sdk'
 
 static def buildTime() {
     return new Date().format("yyyyMMdd")
+}
+
+//MobSDK {
+//    appKey "m2efaa2323a73c"
+//    appSecret "5c3b5136396cbfc63c2fe8d4fb198fdf"
+//    SMSSDK {}
+//}
+
+MobSDK {
+//    appKey "m2efb245f9ef5e"
+//    appSecret "9380ce616f2726beec68851a03b6f8ca"
+    SMSSDK {}
 }
 
 
@@ -45,8 +58,8 @@ android {
         applicationId "fire.cloud.smart.com.smartcloudfire_zhongda"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 52
-        versionName "4.3.45"
+        versionCode 53
+        versionName "4.3.46"
         multiDexEnabled true
 
         manifestPlaceholders = [
@@ -115,6 +128,7 @@ android {
     }
 
 }
+
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
